# xspawner

./: LICENSE  README.md  pyproject.toml  run.sh  start.sh  stop.sh  try.sh  xspawner.json
xspawner/: __init__.py  __main__.py  api_handler.py  common.py  constants.py  flow_handler.py  login.html  server.py  service.py  serviceable.py  ui_handler.py  xspawner.py
xspawner/apps/spawner/: __init__.py  fmt_dict.py  spawner.py
xspawner/apps/spawner/tests/: __main__.py  test.py
xspawner/apps/supervisor/: common.css  fmt_dict.py  supervisor.py
xspawner/apps/supervisor/tests/: test.py
xspawner/demo/: ainput_wait.py  asubmit.py  asubmit_cb.py  cmms.py  evt.py  helloworld.py  yet.py
xspawner/demo/logmon/: __init__.py  logmon.py
xspawner/demo/logmon/static/: index.html
xspawner/examples/: ainput_wait.py  asubmit.py  asubmit_cb.py  helloworld.py  misc.py  yet.py
xspawner/examples/xui/xui/: __init__.py  xui.py
xspawner/plugins/spawner/: spawner.py
xspawner/plugins/spawner/tests/: __main__.py
xspawner/plugins/supervisor/: __init__.py  supervisor.py
xspawner/resources/: index.html
xspawner/utilities/: client.py  log.py  misc.py  msg.py
